--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,19 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+@layer base {
+	:root {
+		--color-text-h1: #2b2b2b;
+		--color-text-h2: #171010;
+		--color-text-dark-highlight: #470d21;
+		--color-text-highlight: #ff9f45;
+		--color-text-base: #ffffff;
+		--color-text-muted: #ffad60;
+		--color-text-inverted: #ffad60;
+		--color-fill: #f9e4d4;
+		--color-button-accent: #ff9f45;
+		--color-button-accent-hover: #d67d3e;
+		--color-buton-muted: #f9e4d4;
+	}
 }
